--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="col-xxl-7 center-container">
                             <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                                 <div class="profile bg-gradient-primary-to-secondary">
-                                    <img class="profile-img" src="assets/my_profile.jpg" alt="..." />
+                                    <img class="profile-img" src="assets/my_profile.jpeg" alt="..." />
                                     <div class="dots-1">
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 191.6 1215.4" style="enable-background: new 0 0 191.6 1215.4" xml:space="preserve">
                                             <g transform="translate(0.000000,1280.000000) scale(0.100000,-0.100000)">
